--- a/Droid/Resources/layout/activity_crime_pager.axml
+++ b/Droid/Resources/layout/activity_crime_pager.axml
@@ -1,6 +1,32 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.view.ViewPager    xmlns:android="http://schemas.android.com/apk/res/android" 
-    android:id="@+id/crime_view_pager" 
-    android:layout_width="match_parent" 
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
     android:layout_height="match_parent">
-</android.support.v4.view.ViewPager>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/crime_view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v4.view.ViewPager>
+
+    <ImageButton
+        android:id="@+id/jump_to_first_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:src="@android:drawable/ic_media_rew"/>
+
+    <ImageButton
+        android:id="@+id/jump_to_last_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:src="@android:drawable/ic_media_ff"/>
+
+</RelativeLayout>
