--- a/Droid/Resources/layout/dialog_date.axml
+++ b/Droid/Resources/layout/dialog_date.axml
@@ -1,8 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DatePicker 
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" 
-    android:id="@+id/dialog_date_picker"
-    android:layout_width="wrap_content" 
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:calendarViewShown="false">
-</DatePicker>
+    tools:context=".PickerActivity">
+    
+    <DatePicker 
+        android:id="@+id/dialog_date_picker"
+        android:layout_width="wrap_content" 
+        android:layout_height="wrap_content"
+        android:calendarViewShown="false">
+    </DatePicker>
+        
+    <Button
+        android:id="@+id/date_picker_ok"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/dialog_date_picker"    
+        android:layout_alignParentEnd="true"
+        android:background="@android:color/transparent"
+        android:textSize="18sp"
+        android:textColor="?attr/colorAccent"
+        android:text="@android:string/ok"/>     
+
+</RelativeLayout>
