--- a/Droid/Resources/layout/fragment_crime_list.axml
+++ b/Droid/Resources/layout/fragment_crime_list.axml
@@ -1,5 +1,37 @@
-﻿<android.support.v7.widget.RecyclerView 
-    xmlns:android="http://schemas.android.com/apk/res/android" 
-    android:id="@+id/crime_recycler_view"
+﻿<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent" 
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent">
+    
+    <LinearLayout
+        android:id="@+id/empty_list_layout"
+        android:orientation="vertical"
+        android:layout_width="match_parent" 
+        android:layout_height="wrap_content"
+        android:visibility="gone">
+        
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="24dp"
+            android:text="@string/no_crimes"/>
+        
+        <Button
+            android:id="@+id/add_crime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="8dp"
+            android:text="@string/new_crime"/>
+        
+    </LinearLayout>
+    
+    
+    <android.support.v7.widget.RecyclerView 
+        android:id="@+id/crime_recycler_view"
+        android:layout_width="match_parent" 
+        android:layout_height="match_parent"/>
+  
+</LinearLayout>
